snippets/Nemerle.Statechart/Tests/testsuite/positive/timed_events_several_units.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;
  /// <summary>
  /// Description of junction_example.
  /// </summary>
  [statechart(
  <#
  flags testing;
  name "timed event several unit";
  
  state A
  {
    a => B;
  }
  
  state B
  {
    after (0.3 sec 100 ms) => A;
  }
   
  #>)]
  public class example
  {
  }

  module Test
  {
    Main() : void
    {
      def fsm = example();
      def tester = fsm.GetTester();
      tester.ConsoleTestInit();
      tester.Initiate("A", "EntryA");
      tester.TestWait("a", 500, "A", "ExitA", "EntryB", "ExitB", "EntryA");
      fsm.Terminate();
    }
  }

/*
BEGIN-OUTPUT
EntryA
[A]
Ok
Processing a 'a' 
ExitA
EntryB
ExitB
EntryA
[A]
Ok
END-OUTPUT
*/
