snippets/Nemerle.Statechart/Tests/testsuite/negative/timed_event_unknown_unit.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;
  /// <summary>
  /// Description of junction_example.
  /// </summary>
  [statechart(
  <#
  name "timed event unknown unit";
  
  state A
  {
    after (3 p) => B; // E: Parse Error: Unknown unit "p" of time used in timed event
  }
  
  state B
  {
  }
   
  #>)]
  public class example
  {
  }

  
